--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+.images {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  
+}
+
+.barberry, .chili, .pepper, .saffron {
+  /*display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap; */
+  max-width: 200px; 
+}
+
 
 /* do not edit this footer */
 .footer {
@@ -24,3 +43,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
